Fixing technology pill wrap

--- a/app/app/components/Experiences/Experience/Experience.module.scss
+++ b/app/app/components/Experiences/Experience/Experience.module.scss
@@ -20,10 +20,4 @@
     .description {
         font: var(--body);
     }
-
-    .technologies {
-        display: flex;
-        flex-direction: row;
-        gap: 0.5rem;
-    }
 }
