--- a/app/app/components/IconButton/IconButton.module.scss
+++ b/app/app/components/IconButton/IconButton.module.scss
@@ -16,7 +16,6 @@
         
         img {
             filter: var(--accent-primary-filter);
-            scale: 1.1;
         }
     }
 }
